fix overlapping menus

--- a/main.css
+++ b/main.css
@@ -922,6 +922,10 @@ body.login {
 
 @media (max-width: 768px) {
 
+    .dashboard #Main {
+        display: none;
+    }
+
     .dashboard #Header {
         position: relative;
         width: 100%;
@@ -932,16 +936,33 @@ body.login {
     .dashboard #logoDiv {
         justify-content: space-between;
         position: relative;
+        gap: 12px;
+    }
+
+    .dashboard #logoDiv::before {
+        content: '';
+        width: 24px;
+        height: 24px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2309090B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2'/%3E%3Ccircle cx='9' cy='7' r='4'/%3E%3Cpath d='M22 21v-2a4 4 0 0 0-3-3.87'/%3E%3Cpath d='M16 3.13a4 4 0 0 1 0 7.75'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-size: contain;
+        cursor: pointer;
+        order: 2;
     }
 
     .dashboard #logoDiv::after {
         content: '';
         width: 24px;
         height: 24px;
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2309090B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='7' height='7' x='3' y='3' rx='1'/%3E%3Crect width='7' height='7' x='14' y='3' rx='1'/%3E%3Crect width='7' height='7' x='14' y='14' rx='1'/%3E%3Crect width='7' height='7' x='3' y='14' rx='1'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%2309090B' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='4' x2='20' y1='12' y2='12'/%3E%3Cline x1='4' x2='20' y1='6' y2='6'/%3E%3Cline x1='4' x2='20' y1='18' y2='18'/%3E%3C/svg%3E");
         background-repeat: no-repeat;
         background-size: contain;
         cursor: pointer;
+        order: 3;
+    }
+
+    .dashboard #logoDiv #logo {
+        order: 1;
     }
 
     .dashboard #logoDiv #logo::before {
@@ -960,15 +981,17 @@ body.login {
         z-index: 999;
         flex-direction: column;
         border-bottom: 1px solid #E4E4E7;
+        padding: 8px 0;
     }
 
-    .dashboard #logoDiv:hover ~ #toolbar,
+    .dashboard #logoDiv::before:hover ~ #toolbar,
     .dashboard #toolbar:hover,
     .dashboard #toolbar:focus-within {
         display: flex !important;
     }
 
-    .dashboard #logoLinksContainer:has(#logoDiv:hover) ~ #Navigation,
+    .dashboard #logoDiv::after:hover ~ #toolbar,
+    .dashboard #logoLinksContainer:has(#logoDiv::after:hover) ~ #Navigation,
     .dashboard #Navigation:hover,
     .dashboard #Navigation:focus-within {
         display: flex !important;
